Update for the custom built items

--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.google.inject.extensions</groupId>
+            <groupId>com.jwebmp.inject.extensions</groupId>
             <artifactId>guice-servlet</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
