--- a/pom.xml
+++ b/pom.xml
@@ -28,20 +28,19 @@
         </dependency>
 
         <dependency>
-            <groupId>io.undertow</groupId>
+            <groupId>com.jwebmp.thirdparty.undertow</groupId>
             <artifactId>undertow-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>io.undertow</groupId>
+            <groupId>com.jwebmp.thirdparty.undertow</groupId>
             <artifactId>undertow-servlet</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>io.undertow</groupId>
+            <groupId>com.jwebmp.thirdparty.undertow</groupId>
             <artifactId>undertow-websockets-jsr</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.jwebmp.core</groupId>
             <artifactId>jwebmp-core</artifactId>
