Guava, Type JAR in Dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -24,52 +24,52 @@
 
         <dependency>
             <groupId>com.jwebmp.inject.extensions</groupId>
-            <artifactId>guice-servlet</artifactId>
-        </dependency>
+            <artifactId>guice-servlet</artifactId><type>jar</type>
+            </dependency>
 
         <dependency>
-            <groupId>com.jwebmp.thirdparty.undertow</groupId>
-            <artifactId>undertow-core</artifactId>
-        </dependency>
+            <groupId>com.jwebmp.jpms.thirdparty.undertow</groupId>
+            <artifactId>undertow-core</artifactId><type>jar</type>
+            </dependency>
 
         <dependency>
-            <groupId>com.jwebmp.thirdparty.undertow</groupId>
-            <artifactId>undertow-servlet</artifactId>
-        </dependency>
+            <groupId>com.jwebmp.jpms.thirdparty.undertow</groupId>
+            <artifactId>undertow-servlet</artifactId><type>jar</type>
+            </dependency>
 
         <dependency>
-            <groupId>com.jwebmp.thirdparty.undertow</groupId>
-            <artifactId>undertow-websockets-jsr</artifactId>
-        </dependency>
+            <groupId>com.jwebmp.jpms.thirdparty.undertow</groupId>
+            <artifactId>undertow-websockets-jsr</artifactId><type>jar</type>
+            </dependency>
         <dependency>
             <groupId>com.jwebmp.core</groupId>
-            <artifactId>jwebmp-core</artifactId>
-        </dependency>
+            <artifactId>jwebmp-core</artifactId><type>jar</type>
+            </dependency>
 
         <dependency>
             <groupId>com.jwebmp.guicedee</groupId>
-            <artifactId>guiced-log-master</artifactId>
-        </dependency>
+            <artifactId>guiced-log-master</artifactId><type>jar</type>
+            </dependency>
 
         <dependency>
             <groupId>com.jwebmp.guicedee</groupId>
-            <artifactId>guiced-injection</artifactId>
-        </dependency>
+            <artifactId>guiced-injection</artifactId><type>jar</type>
+            </dependency>
 
         <dependency>
             <groupId>com.jwebmp.guicedee.servlets</groupId>
-            <artifactId>guiced-undertow</artifactId>
-        </dependency>
+            <artifactId>guiced-undertow</artifactId><type>jar</type>
+            </dependency>
 
         <dependency>
             <groupId>com.jwebmp.plugins.jquery</groupId>
-            <artifactId>jwebmp-jquery-ui</artifactId>
-        </dependency>
+            <artifactId>jwebmp-jquery-ui</artifactId><type>jar</type>
+            </dependency>
 
         <dependency>
             <groupId>com.jwebmp.plugins.forms</groupId>
-            <artifactId>jwebmp-smart-wizard</artifactId>
-        </dependency>
+            <artifactId>jwebmp-smart-wizard</artifactId><type>jar</type>
+            </dependency>
 
     </dependencies>
 
