--- a/pom.xml
+++ b/pom.xml
@@ -47,17 +47,17 @@
             </dependency>
 
         <dependency>
-            <groupId>com.jwebmp.jpms.guicedee</groupId>
+            <groupId>com.guicedee</groupId>
             <artifactId>guiced-log-master</artifactId><type>jar</type>
             </dependency>
 
         <dependency>
-            <groupId>com.jwebmp.jpms.guicedee</groupId>
+            <groupId>com.guicedee</groupId>
             <artifactId>guiced-injection</artifactId><type>jar</type>
             </dependency>
 
         <dependency>
-            <groupId>com.jwebmp.jpms.guicedee.servlets</groupId>
+            <groupId>com.guicedee.servlets</groupId>
             <artifactId>guiced-undertow</artifactId><type>jar</type>
             </dependency>
 
