--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
         <dependency>
             <groupId>com.guicedee.services</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <artifactId>jakarta.servlet-api</artifactId>
             <type>jar</type>
         </dependency>
 
