--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.jwebmp.examples.undertow</groupId>
         <artifactId>jwebmp-examples-undertow</artifactId>
-        <version>0.0.0_0-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>smartwizard</artifactId>
@@ -46,14 +46,11 @@
             <artifactId>jwebmp-core</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.guicedee</groupId>
-            <artifactId>guiced-log-master</artifactId>
-        </dependency>
+
 
         <dependency>
             <groupId>com.guicedee</groupId>
-            <artifactId>guiced-injection</artifactId>
+            <artifactId>guice-injection</artifactId>
         </dependency>
 
         <dependency>
